[package]
name = "nadeo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
chrono = "0.4.38"
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
derive_more = "1.0.0-beta.6"
futures = "0.3.30"
