[package]
name = "nadeo-api"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0"
description = "An interface for working with the Nadeo API"
repository = "https://www.github.com/TgZ39/nadeo-api"
keywords = ["nadeo", "nadeo-api-client"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
chrono = "0.4.38"
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
derive_more = "0.99.17"
futures = "0.3.30"
