[package]
name = "nadeo-api"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
description = "An interface for working with the Nadeo API"
repository = "https://www.github.com/TgZ39/nadeo-api"
keywords = ["nadeo", "nadeo-api-client", "trackmania"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
strum = { version = "0.26", features = ["strum_macros", "derive"] }
derive_more = { version = "1.0", features = ["display"] }
futures = "0.3"
